--- a/identity-service/src/main/resources/application.yaml
+++ b/identity-service/src/main/resources/application.yaml
@@ -17,8 +17,8 @@ spring:
       client:
         registration:
           google:
-            client-id: "129354124634-jt4im8o5p7a0co5b938q6qgblf6vfsg2.apps.googleusercontent.com"
-            client-secret: "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"
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_SECRET}
             redirect-uri: "{baseUrl}/login/oauth2/code/google"
             scope:
               - profile
