--- a/file-service/pom.xml
+++ b/file-service/pom.xml
@@ -49,6 +49,11 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>javazoom</groupId>
+			<artifactId>jlayer</artifactId>
+			<version>1.0.1</version>
+		</dependency>
 
 	</dependencies>
 
