--- a/file-service/src/main/resources/application.properties
+++ b/file-service/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=file-service
 file.upload-dir=./file-service/file
+file.musics-dir=musics
+file.avatars-dir=avatars
+file.covers-dir=covers
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=20MB
+
+
+server.servlet.context-path=/file-service
