--- a/search-service/pom.xml
+++ b/search-service/pom.xml
@@ -71,6 +71,12 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.4.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>3.3.3</version>
+		</dependency>
 
 	</dependencies>
 
@@ -81,7 +87,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
-			<!-- <plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven-compiler-plugin.version}</version>
@@ -101,7 +107,7 @@
 						<arg>-Amapstruct.verbose=true</arg>
 					</compilerArgs>
 				</configuration>
-			</plugin> -->
+			</plugin>
 
 		</plugins>
 	</build>
