--- a/user-library-service/src/main/resources/application.properties
+++ b/user-library-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=user-library-service
+spring.datasource.url=jdbc:sqlserver://localhost:1432;databaseName=UserLibrary;encrypt=true;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=YourStrong!Passw0rd
+
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
