--- a/file-service/src/main/resources/application.properties
+++ b/file-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=file-service
+server.port=8083
 file.upload-dir=./file-service/file
 file.musics-dir=musics
 file.avatars-dir=avatars
