--- a/music-service/pom.xml
+++ b/music-service/pom.xml
@@ -77,6 +77,11 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<version>4.2.0</version>
 		</dependency>
+
+		<dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-resource-server</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
