--- a/music-service/src/main/resources/application.yml
+++ b/music-service/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: music-service
   datasource:
-    url: jdbc:sqlserver://localhost:1433;databaseName=Music;encrypt=true;trustServerCertificate=true
+    url: jdbc:sqlserver://localhost:1435;databaseName=Music;encrypt=true;trustServerCertificate=true
     username: sa
-    password: 123456789
+    password: YourStrong!Passw0rd
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
   jpa:
     database-platform: org.hibernate.dialect.SQLServerDialect
