--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -20,9 +20,47 @@ spring:
             - Path=${app.api-prefix}/profile/**
           filters:
             - StripPrefix=1
+        - id: music-service
+          uri: http://localhost:8082
+          predicates:
+            - Path=${app.api-prefix}/music-service/**
+          filters:
+            - StripPrefix=1
+
+        - id: profile
+          uri: http://localhost:8083
+          predicates:
+            - Path=${app.api-prefix}/file-service/**
+          filters:
+            - StripPrefix=1
+        - id: search-service
+          uri: http://localhost:8084
+          predicates:
+            - Path=${app.api-prefix}/search-service/**
+          filters:
+            - StripPrefix=1
         - id: user-library-service
           uri: http://localhost:8085
           predicates:
             - Path=${app.api-prefix}/user-library/**
+          filters:
+            - StripPrefix=1
+        - id: comment-service
+          uri: http://localhost:8086
+          predicates:
+            - Path=${app.api-prefix}/comment-service/**
+          filters:
+            - StripPrefix=1
+
+        - id: notification-service
+          uri: http://localhost:8087
+          predicates:
+            - Path=${app.api-prefix}/notification-service/**
+          filters:
+            - StripPrefix=1
+        - id: admin-service
+          uri: http://localhost:8088
+          predicates:
+            - Path=${app.api-prefix}/admin-service/**
           filters:
             - StripPrefix=1
