--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -7,40 +7,44 @@ spring:
     name: api-gateway
   cloud:
     gateway:
+      discovery:
+        locator:
+          enabled: true
+          lowerCaseServiceId: true
       routes:
         - id: identity-service
-          uri: http://localhost:8080
+          uri: lb://identity-service
           predicates:
             - Path=${app.api-prefix}/identity/**
           filters:
             - StripPrefix=1
         - id: profile
-          uri: http://localhost:8081
+          uri: lb://profile-service
           predicates:
             - Path=${app.api-prefix}/profile/**
           filters:
             - StripPrefix=1
         - id: music-service
-          uri: http://localhost:8082
+          uri: lb://music-service
           predicates:
             - Path=${app.api-prefix}/music-service/**
           filters:
             - StripPrefix=1
 
-        - id: profile
-          uri: http://localhost:8083
+        - id: file-service
+          uri: lb://file-service
           predicates:
             - Path=${app.api-prefix}/file-service/**
           filters:
             - StripPrefix=1
         - id: search-service
-          uri: http://localhost:8084
+          uri: lb://search-service
           predicates:
             - Path=${app.api-prefix}/search-service/**
           filters:
             - StripPrefix=1
         - id: user-library-service
-          uri: http://localhost:8085
+          uri: lb://user-library-service
           predicates:
             - Path=${app.api-prefix}/user-library/**
           filters:
@@ -64,3 +68,9 @@ spring:
             - Path=${app.api-prefix}/admin-service/**
           filters:
             - StripPrefix=1
+
+eureka:
+  client:
+    service-url:
+      default-zone:
+        http://localhost:8761/eureka/
