--- a/profile-service/src/main/resources/application.yaml
+++ b/profile-service/src/main/resources/application.yaml
@@ -10,14 +10,28 @@ server:
 #      password: 12345678
 
 spring:
+  # datasource:
+  #   url: "jdbc:mysql://localhost:3306/profile_service"
+  #   username: "root"
+  #   password: "sa"
+  # jpa:
+  #   hibernate:
+  #     ddl-auto: update
+  #   show-sql: true
+  application:
+    name: profile-service
   datasource:
-    url: "jdbc:mysql://localhost:3306/profile_service"
-    username: "root"
-    password: "sa"
+    url: jdbc:sqlserver://localhost:1433;databaseName=Profile;encrypt=true;trustServerCertificate=true
+    username: sa
+    password: 123456789
+    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
   jpa:
+    database-platform: org.hibernate.dialect.SQLServerDialect
     hibernate:
       ddl-auto: update
-    show-sql: true
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    defer-datasource-initialization: true
 
 
 #spring:
@@ -37,3 +51,11 @@ spring:
 app:
   services:
     file: "http://localhost:8082/file-service"
+
+eureka:
+  client:
+    service-url:
+      default-zone:
+        http://localhost:8761/eureka/
+  instance:
+    preferIpAddress: true
