Feat: add swagger

--- a/search-service/src/main/resources/application.yml
+++ b/search-service/src/main/resources/application.yml
@@ -10,7 +10,8 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
-        spring.json.trusted.packages: com.MusicPlatForm.search_service.Dto.Request
+        # spring.json.trusted.packages: com.MusicPlatForm.search_service.Dto.Request
+        spring.json.trusted.packages: "*"
 
 
     producer:
@@ -19,7 +20,7 @@ spring:
 server:
   port: 8084
   servlet:
-    context-path: /search
+    context-path: /search-service
 
 
 # spring.elasticsearch
