--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.7</version>
+		<version>3.4.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
@@ -28,7 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>23</java.version>
-		<spring-cloud.version>2023.0.5</spring-cloud.version>
+		<spring-cloud.version>2024.0.1</spring-cloud.version>
 		<eureka-client.version>4.2.1</eureka-client.version>
 	</properties>
 	<dependencies>
@@ -53,6 +53,17 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 			<version>${eureka-client.version}</version>
 		</dependency> 
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+			<version>2.8.5</version>
+		</dependency>
+		<!-- <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency> -->
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
