--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -11,6 +11,18 @@ spring:
         locator:
           enabled: true
           lowerCaseServiceId: true
+      globalcors:
+        add-to-simple-url-handler-mapping: true
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "*"
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+              - OPTIONS
+            allowedHeaders: "*"
       routes:
         - id: identity-service
           uri: lb://identity-service
@@ -69,8 +81,31 @@ spring:
           filters:
             - StripPrefix=1
 
+springdoc:
+  override-with-generic-response: false
+  api-docs:
+    enabled: true
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
+    config-url: /v3/api-docs/swagger-config
+    urls:
+      - name: Gateway
+        url: /v3/api-docs
+      - name: File service
+        url: /api/file-service/v3/api-docs
+      - name: Music service
+        url: /api/music-service/v3/api-docs
+      - name: Identity service
+        url: /api/identity-service/v3/api-docs
+      - name: Comment service
+        url: /api/comment-serivce/v3/api-docs
+      - name: Search service
+        url: /api/search-service/v3/api-docs
 eureka:
   client:
     service-url:
       default-zone:
         http://localhost:8761/eureka/
+  instance:
+    preferIpAddress: true
