--- a/identity-service/pom.xml
+++ b/identity-service/pom.xml
@@ -118,6 +118,12 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+        		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.4</version>
+		</dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
