--- a/music-service/src/main/resources/application.yml
+++ b/music-service/src/main/resources/application.yml
@@ -17,7 +17,11 @@ spring:
         multipart:
             max-file-size: 100MB
             max-request-size: 200MB
-
+    kafka:
+        bootstrap-servers: localhost:9094
+        producer:
+            key-serializer: org.apache.kafka.common.serialization.StringSerializer
+            value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 app:
     services:
         file: http://localhost:8083/file-service
