--- a/profile-service/pom.xml
+++ b/profile-service/pom.xml
@@ -108,6 +108,12 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 			<version>${eureka-client.version}</version>
 		</dependency> 
+		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.4</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
