--- a/search-service/pom.xml
+++ b/search-service/pom.xml
@@ -29,7 +29,7 @@
 	<properties>
 		<java.version>23</java.version>
 		<mapstruct.version>1.6.3</mapstruct.version>
-		<eureka-client.version>4.1.2</eureka-client.version>
+		<eureka-client.version>4.2.1</eureka-client.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -84,6 +84,12 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 			<version>${eureka-client.version}</version>
 		</dependency> 
+				<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
