--- a/user-library-service/pom.xml
+++ b/user-library-service/pom.xml
@@ -96,6 +96,12 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 			<version>${eureka-client.version}</version>
 		</dependency> 
+		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.4</version>
+		</dependency>
     </dependencies>
 
 	<build>
