fix path file client in profile service

--- a/search-service/pom.xml
+++ b/search-service/pom.xml
@@ -30,6 +30,7 @@
 		<java.version>23</java.version>
 		<mapstruct.version>1.6.3</mapstruct.version>
 		<eureka-client.version>4.2.1</eureka-client.version>
+		<projectlombok-lombok.version>1.18.30</projectlombok-lombok.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -111,6 +112,11 @@
 							<groupId>org.mapstruct</groupId>
 							<artifactId>mapstruct-processor</artifactId>
 							<version>${mapstruct.version}</version>
+						</path>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>${projectlombok-lombok.version}</version>
 						</path>
 					</annotationProcessorPaths>
 					<compilerArgs>
