--- a/music-service/src/main/resources/application.yml
+++ b/music-service/src/main/resources/application.yml
@@ -22,6 +22,11 @@ spring:
         producer:
             key-serializer: org.apache.kafka.common.serialization.StringSerializer
             value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+            acks: -1
+            retries: 1 #gửi lại nếu lỗi
+            # properties: 
+            #     enable.idempotence: true
+            #     max.
 app:
     services:
         file: http://localhost:8083/file-service
