--- a/search-service/src/main/resources/application.yml
+++ b/search-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
       group-id: search_group
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
       properties:
         # spring.json.trusted.packages: com.MusicPlatForm.search_service.Dto.Request
         spring.json.trusted.packages: "*"
