--- a/profile-service/src/main/resources/application.yaml
+++ b/profile-service/src/main/resources/application.yaml
@@ -12,6 +12,13 @@ spring:
     #   hibernate:
     #     ddl-auto: update
     #   show-sql: true
+    kafka:
+        bootstrap-servers: localhost:9094
+        producer:
+            key-serializer: org.apache.kafka.common.serialization.StringSerializer
+            value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+            acks: -1
+            retries: 1 #gửi lại nếu lỗi
     application:
         name: profile-service
     datasource:
